--- a/writing.html
+++ b/writing.html
@@ -25,7 +25,15 @@
       <div class="writing-text">
         <h2><em>In</em>to Such <em>Security</em></h2>
         <p>A poem about one’s insecurity and the longing for such security that whoever they are, it will be enough.</p>
-        <a href="#" class="view-link">Click here to read</a>
+        <!-- PDF Viewer -->
+<div class="pdf-container">
+  <h3>Into Such Security</h3>
+  <object data="writing/into-security.pdf" type="application/pdf" width="100%" height="600px">
+    <p>Your browser does not support PDFs. 
+      <a href="writing/into-security.pdf" target="_blank">Click here to download the PDF instead.</a>
+    </p>
+  </object>
+</div>
       </div>
     </article>
 
