--- a/writing.html
+++ b/writing.html
@@ -26,16 +26,11 @@
         <h2><em>In</em>to Such <em>Security</em></h2>
         <p>A poem about one’s insecurity and the longing for such security that whoever they are, it will be enough.</p>
         <!-- PDF Viewer -->
-<div class="pdf-container">
-  <h3>Into Such Security</h3>
-  <object data="writing/into-security.pdf" type="application/pdf" width="100%" height="600px">
-    <p>Your browser does not support PDFs. 
-      <a href="writing/into-security.pdf" target="_blank">Click here to download the PDF instead.</a>
-    </p>
-  </object>
-</div>
-      </div>
-    </article>
+    <div class="pdf-container">
+      <object data="writing/into-security.pdf" type="application/pdf" width="100%" height="600px"></object>
+    </div>
+  </div>
+</article>
 
     <article class="writing-card">
       <img src="images/article2.jpg" alt="Article 2 image">
@@ -52,11 +47,14 @@
     <article class="writing-card">
       <img src="images/article3.jpg" alt="Article 3 image">
       <div class="writing-text">
-        <h2>Fields of Bountiful Dead Romances</h2>
-        <p>A Critique of Thomas Hardy's <em>Far from the Madding Crowd</em></p>
-        <a href="#" class="view-link">Click here to read</a>
-      </div>
-    </article>
+        <h2>If Only Elope Was an Easy Choice</h2>
+        <p>A Stylistic Analysis of Brokeback Mountain</em></p>
+        <!-- PDF Viewer -->
+    <div class="pdf-container">
+      <object data="writing/brokeback-mountain.pdf" type="application/pdf" width="100%" height="600px"></object>
+    </div>
+  </div>
+</article>
 
   </main>
 
