--- a/writing.html
+++ b/writing.html
@@ -49,12 +49,9 @@
       <div class="writing-text">
         <h2>If Only Elope Was an Easy Choice</h2>
         <p>A Stylistic Analysis of Brokeback Mountain</em></p>
-        <!-- PDF Viewer -->
-    <div class="pdf-container">
-      <object data="writing/brokeback-mountain.pdf" type="application/pdf" width="100%" height="600px"></object>
-    </div>
-  </div>
-</article>
+        <a href="writing/brokeback-mountain.pdf" target="_blank" class="view-link">Click here to read</a>
+      </div>
+    </article>
 
   </main>
 
