--- a/writing.html
+++ b/writing.html
@@ -25,12 +25,9 @@
       <div class="writing-text">
         <h2><em>In</em>to Such <em>Security</em></h2>
         <p>A poem about one’s insecurity and the longing for such security that whoever they are, it will be enough.</p>
-        <!-- PDF Viewer -->
-    <div class="pdf-container">
-      <object data="writing/into-security.pdf" type="application/pdf" width="100%" height="600px"></object>
-    </div>
-  </div>
-</article>
+        <a href="writing/into-security.pdf" target="_blank" class="view-link">Click here to read</a>
+      </div>
+    </article>
 
     <article class="writing-card">
       <img src="images/article2.jpg" alt="Article 2 image">
@@ -40,7 +37,7 @@
   Ang tulang tungkol sa nakaraang kasintamis ng arnibal at kasinglambot ng malasutlang tokwa — ang init ng yakap na nagmumula sa taglimang pisong taho.<br>
   <em class="translation">A poem about a past as sweet as syrup and as soft as silken tofu — the warmth of an embrace poured from a five-peso cup of taho.</em>
 </p>
-        <a href="#" class="view-link">Click here to read</a>
+        <a href="writing/taho.pdf" target="_blank" class="view-link">Click here to read</a>
       </div>
     </article>
 
