--- a/design.html
+++ b/design.html
@@ -144,7 +144,7 @@
   <!-- Project Section -->
   <section class="project">
     <img src="images/project1-thumb.jpg" alt="Project 1" class="project-thumb"
-      data-pages='["images/project1-page1.jpg","images/project1-page2.jpg","images/project1-page3.jpg"]'>
+      data-pages='["images/project1-page1.jpg","images/project1-page2.jpg","images/project1-page3.jpg","images/project1-page4.jpg","images/project1-page5.jpg","images/project1-page6.jpg","images/project1-page7.jpg","images/project1-page8.jpg","images/project1-page9.jpg",]'>
     <h3>Project 1</h3>
   </section>
 
