--- a/design.html
+++ b/design.html
@@ -154,6 +154,24 @@
       data-pages='["images/project2-page1.jpg"]'>
     <h3>Project 2</h3>
   </div>
+
+    <div class="project-item">
+    <img src="images/project3-thumb.jpg" alt="Project 3" class="project-thumb"
+      data-pages='["images/project3-page1.jpg","images/project3-page2.jpg","images/project3-page3.jpg"]'>
+    <h3>Project 3</h3>
+  </div>
+
+    <div class="project-item">
+    <img src="images/project4-thumb.jpg" alt="Project 4" class="project-thumb"
+      data-pages='["images/project4-page1.jpg","images/project4-page2.jpg"]'>
+    <h3>Project 4</h3>
+  </div>
+
+    <div class="project-item">
+    <img src="images/project5-thumb.jpg" alt="Project 5" class="project-thumb"
+      data-pages='["images/project5-page1.jpg","images/project5-page2.jpg"]'>
+    <h3>Project 4</h3>
+  </div>
 </section>
 
   <!-- ===== PROJECT LIGHTBOX ===== -->
