--- a/design.html
+++ b/design.html
@@ -157,7 +157,7 @@
 
     <div class="project-item">
     <img src="images/project3-thumb.jpg" alt="Project 3" class="project-thumb"
-      data-pages='["images/project3-page1.jpg","images/project3-page2.jpg","images/project3-page3.jpg"]'>
+      data-pages='["images/project3-page1.jpg","images/project3-page2.jpg"]'>
     <h3>Project 3</h3>
   </div>
 
