--- a/design.html
+++ b/design.html
@@ -163,7 +163,7 @@
 
     <div class="project-item">
     <img src="images/project4-thumb.jpg" alt="Project 4" class="project-thumb"
-      data-pages='["images/project4-page1.jpg","images/project4-page2.jpg"]'>
+      data-pages='["images/project4-page1.jpg","images/project4-page2.jpg","images/project4-page3.jpg","images/project4-page4.jpg","images/project4-page5.jpg","images/project4-page6.jpg","images/project4-page7.jpg","images/project4-page8.jpg","images/project4-page9.jpg","images/project4-page10.jpg"]'>
     <h3>Project 4</h3>
   </div>
 
