--- a/design.html
+++ b/design.html
@@ -159,18 +159,34 @@
     <img src="images/project3-thumb.jpg" alt="Project 3" class="project-thumb"
       data-pages='["images/project3-page1.jpg","images/project3-page2.jpg"]'>
     <h3>Project 3</h3>
+      <p>
+      Learn more about this project: 
+      <a href="https://www.facebook.com/share/p/19gdqPvj3M/">Post 1</a> | 
+      <a href="https://www.facebook.com/share/p/1GFZhAdZwL/">Post 2</a>
+    </p>
   </div>
 
     <div class="project-item">
     <img src="images/project4-thumb.jpg" alt="Project 4" class="project-thumb"
       data-pages='["images/project4-page1.jpg","images/project4-page2.jpg","images/project4-page3.jpg","images/project4-page4.jpg","images/project4-page5.jpg","images/project4-page6.jpg","images/project4-page7.jpg","images/project4-page8.jpg","images/project4-page9.jpg","images/project4-page10.jpg"]'>
     <h3>Project 4</h3>
+      <p>
+      Learn more about this project: 
+      <a href="https://www.facebook.com/share/p/1JPdnHtrNp/">Post 1</a> | 
+      <a href="https://www.facebook.com/share/v/17846ZizW9/">Post 2 (Video)</a> |
+      <a href="https://www.facebook.com/share/p/1F91NinAdm/">Post 3 (Compilation)</a>
+    </p>
   </div>
 
     <div class="project-item">
     <img src="images/project5-thumb.jpg" alt="Project 5" class="project-thumb"
       data-pages='["images/project5-page1.jpg","images/project5-page2.jpg"]'>
-    <h3>Project 4</h3>
+    <h3>Project 5</h3>
+      <p>
+      Learn more about this project: 
+      <a href="https://www.facebook.com/share/p/16wfWTffFS/">Post 1</a> | 
+      <a href="https://www.facebook.com/share/p/17BL3PQykN/">Post 2</a>
+    </p>
   </div>
 </section>
 
