--- a/design.html
+++ b/design.html
@@ -143,50 +143,49 @@
 
   <!-- Project Section -->
   <section class="project">
+  <!-- Project 1 -->
   <div class="project-item">
     <img src="images/project1-thumb.jpg" alt="Project 1" class="project-thumb"
-      data-pages='["images/project1-page1.jpg","images/project1-page2.jpg","images/project1-page3.jpg","images/project1-page4.jpg","images/project1-page5.jpg","images/project1-page6.jpg","images/project1-page7.jpg","images/project1-page8.jpg","images/project1-page9.jpg"]'>
+      data-pages='["images/project1-page1.jpg","images/project1-page2.jpg","images/project1-page3.jpg","images/project1-page4.jpg","images/project1-page5.jpg","images/project1-page6.jpg","images/project1-page7.jpg","images/project1-page8.jpg","images/project1-page9.jpg"]'
+      data-links='[{"text":"Full Post","url":"https://www.facebook.com/share/p/19gdqPvj3M/"},
+                   {"text":"Project Details","url":"project1-details.html"}]'>
     <h3>Project 1</h3>
   </div>
-  
+
+  <!-- Project 2 -->
   <div class="project-item">
     <img src="images/project2-thumb.jpg" alt="Project 2" class="project-thumb"
-      data-pages='["images/project2-page1.jpg"]'>
+      data-pages='["images/project2-page1.jpg"]'
+      data-links='[{"text":"Full Post","url":"https://www.facebook.com/share/p/1GFZhAdZwL/"}]'>
     <h3>Project 2</h3>
   </div>
 
-    <div class="project-item">
+  <!-- Project 3 -->
+  <div class="project-item">
     <img src="images/project3-thumb.jpg" alt="Project 3" class="project-thumb"
-      data-pages='["images/project3-page1.jpg","images/project3-page2.jpg"]'>
+      data-pages='["images/project3-page1.jpg","images/project3-page2.jpg"]'
+      data-links='[{"text":"Post 1","url":"https://www.facebook.com/share/p/19gdqPvj3M/"},
+                   {"text":"Post 2","url":"https://www.facebook.com/share/p/1GFZhAdZwL/"}]'>
     <h3>Project 3</h3>
-      <p>
-      Learn more about this project: 
-      <a href="https://www.facebook.com/share/p/19gdqPvj3M/">Post 1</a> | 
-      <a href="https://www.facebook.com/share/p/1GFZhAdZwL/">Post 2</a>
-    </p>
   </div>
 
-    <div class="project-item">
+  <!-- Project 4 -->
+  <div class="project-item">
     <img src="images/project4-thumb.jpg" alt="Project 4" class="project-thumb"
-      data-pages='["images/project4-page1.jpg","images/project4-page2.jpg","images/project4-page3.jpg","images/project4-page4.jpg","images/project4-page5.jpg","images/project4-page6.jpg","images/project4-page7.jpg","images/project4-page8.jpg","images/project4-page9.jpg","images/project4-page10.jpg"]'>
+      data-pages='["images/project4-page1.jpg","images/project4-page2.jpg","images/project4-page3.jpg","images/project4-page4.jpg","images/project4-page5.jpg","images/project4-page6.jpg","images/project4-page7.jpg","images/project4-page8.jpg","images/project4-page9.jpg","images/project4-page10.jpg"]'
+      data-links='[{"text":"Post 1","url":"https://www.facebook.com/share/p/1JPdnHtrNp/"},
+                   {"text":"Post 2 (Video)","url":"https://www.facebook.com/share/v/17846ZizW9/"},
+                   {"text":"Post 3 (Compilation)","url":"https://www.facebook.com/share/p/1F91NinAdm/"}]'>
     <h3>Project 4</h3>
-      <p>
-      Learn more about this project: 
-      <a href="https://www.facebook.com/share/p/1JPdnHtrNp/">Post 1</a> | 
-      <a href="https://www.facebook.com/share/v/17846ZizW9/">Post 2 (Video)</a> |
-      <a href="https://www.facebook.com/share/p/1F91NinAdm/">Post 3 (Compilation)</a>
-    </p>
   </div>
 
-    <div class="project-item">
+  <!-- Project 5 -->
+  <div class="project-item">
     <img src="images/project5-thumb.jpg" alt="Project 5" class="project-thumb"
-      data-pages='["images/project5-page1.jpg","images/project5-page2.jpg"]'>
+      data-pages='["images/project5-page1.jpg","images/project5-page2.jpg"]'
+      data-links='[{"text":"Post 1","url":"https://www.facebook.com/share/p/16wfWTffFS/"},
+                   {"text":"Post 2","url":"https://www.facebook.com/share/p/17BL3PQykN/"}]'>
     <h3>Project 5</h3>
-      <p>
-      Learn more about this project: 
-      <a href="https://www.facebook.com/share/p/16wfWTffFS/">Post 1</a> | 
-      <a href="https://www.facebook.com/share/p/17BL3PQykN/">Post 2</a>
-    </p>
   </div>
 </section>
 
