--- a/artworks.html
+++ b/artworks.html
@@ -28,6 +28,10 @@
       <a href="#" data-index="5"><img src="images/qualityeducation.jpg" alt="Traditional sketch"></a>
       <a href="#" data-index="6"><img src="images/yumeko.jpg" alt="Digital illustration"></a>
       <a href="#" data-index="7"><img src="images/artcommission.jpg" alt="Traditional watercolor piece"></a>
+      <a href="#" data-index="7"><img src="images/sabrina.jpg" alt="Sabrina Carpenter"></a>
+      <a href="#" data-index="7"><img src="images/ariana1.jpg" alt="Ariana for Swarovski"></a>
+      <a href="#" data-index="7"><img src="images/ariana2.jpg" alt="Ariana Grande"></a>
+      <a href="#" data-index="7"><img src="images/thecreationofadam.jpg" alt="The Creation of Adam"></a>
     </div>
   </main>
 
@@ -36,10 +40,6 @@
     <div class="lightbox-bg"></div>
     <div class="lightbox-content">
       <img src="" alt="Artwork Full View" class="lightbox-img">
-      <div class="lightbox-desc">
-        <h3>Artwork Title</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo ipsum sed mi luctus, nec convallis justo pretium.</p>
-      </div>
     </div>
     <span class="close-btn">✕</span>
     <span class="prev-btn">←</span>
