--- a/writing.html
+++ b/writing.html
@@ -13,7 +13,7 @@
 <a href="index.html" class="back-button">Back</a>
   <div class="banner-text">
     <h1>Writing Pieces</h1>
-    <h2>My sample works of poetry and creative reflections.</h2>
+    <h2>My sample works of poetry and stylistic analysis.</h2>
   </div>
 </header>
 
