--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!-- IMAGE -->
     <div class="relative">
       <img
-        src="YOUR_IMAGE.png"
+        src="karl_pogi.png"
         alt="Karl portrait"
         class="w-[300px] md:w-[380px] rotate-[-4deg]"
       />
