--- a/index.html
+++ b/index.html
@@ -1,138 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Karl Dulce — Portfolio</title>
-
-  <!-- Tailwind -->
-  <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          fontFamily: {
-            lexend: ['Lexend', 'sans-serif'],
-          },
-        },
-      },
-    }
-  </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DeepSite AI - Responsive Website Generator</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        body { background-color: #030712; color: white; }
+        .gradient-text {
+            background: linear-gradient(to right, #9333ea, #2563eb);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+        .glass {
+            background: rgba(255, 255, 255, 0.03);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+    </style>
 </head>
+<body class="antialiased font-sans">
 
-<body class="font-lexend bg-white text-black overflow-x-hidden">
+    <header class="sticky top-0 z-50 w-full border-b border-white/10 bg-black/60 backdrop-blur-xl">
+        <div class="container mx-auto flex h-16 items-center justify-between px-6">
+            <div class="flex items-center gap-8">
+                <a href="#" class="flex items-center gap-2">
+                    <div class="w-8 h-8 bg-gradient-to-br from-purple-600 to-blue-600 rounded-md"></div>
+                    <span class="text-xl font-bold gradient-text">DeepSite AI</span>
+                </a>
+                <nav class="hidden md:flex gap-6 text-sm font-medium text-gray-400">
+                    <a href="#" class="hover:text-white transition-colors">Home</a>
+                    <a href="#" class="hover:text-white transition-colors">AI Chat</a>
+                    <a href="#" class="hover:text-white transition-colors">AI Image</a>
+                    <a href="#" class="hover:text-white transition-colors">AI Video</a>
+                    <a href="#" class="hover:text-white transition-colors">Pricing</a>
+                </nav>
+            </div>
+            <div class="flex items-center gap-4">
+                <button class="text-sm border border-white/20 px-4 py-2 rounded-lg hover:bg-white/5 transition">Login</button>
+            </div>
+        </div>
+    </header>
 
-<!-- NAV -->
-<header class="fixed top-0 left-0 right-0 bg-white z-50">
-  <nav class="max-w-7xl mx-auto px-10 py-6 flex justify-between items-center">
-    <h1 class="text-lg font-semibold">Karl Dulce</h1>
-    <div class="flex gap-8 text-sm font-medium">
-      <a href="#top" class="hover:underline">Home</a>
-      <a href="#about" class="hover:underline">About</a>
-      <a href="#projects" class="hover:underline">Projects</a>
-      <a href="cv.html" class="hover:underline">CV</a>
-      <a href="#contact" class="hover:underline">Contact</a>
-    </div>
-  </nav>
-</header>
+    <main class="relative min-h-screen flex flex-col items-center justify-center px-4 overflow-hidden">
+        
+        <div class="absolute top-1/4 left-1/4 w-96 h-96 bg-purple-600/20 blur-[120px] rounded-full -z-10"></div>
+        <div class="absolute bottom-1/4 right-1/4 w-96 h-96 bg-blue-600/20 blur-[120px] rounded-full -z-10"></div>
 
-<!-- HERO -->
-<section id="top" class="min-h-screen flex items-center pt-32">
-  <div class="max-w-7xl mx-auto px-10 w-full flex flex-col lg:flex-row items-center justify-between gap-20">
+        <div class="max-w-4xl w-full text-center space-y-8">
+            <h1 class="text-4xl md:text-6xl font-extrabold tracking-tight">
+                Welcome 👋! <br/>
+                <span class="gradient-text">What do you want to create?</span>
+            </h1>
+            
+            <p class="text-gray-400 text-lg max-w-2xl mx-auto">
+                Generate professional, SEO-optimized websites instantly with DeepSeek, Gemini, and Claude. No coding required.
+            </p>
 
-    <!-- TEXT -->
-    <div>
-      <p class="text-lg mb-4">Hi! I’m</p>
+            <div class="glass rounded-2xl p-6 shadow-2xl">
+                <div class="flex flex-col md:flex-row gap-4 mb-4">
+                    <div class="flex-1 text-left">
+                        <label class="text-xs font-semibold text-gray-500 uppercase tracking-wider">Select Model</label>
+                        <select class="w-full bg-white/5 border border-white/10 rounded-lg p-2 mt-1 focus:ring-2 focus:ring-purple-500 outline-none">
+                            <option>DeepSeek Chat V3.2</option>
+                            <option>Gemini 3 Pro</option>
+                            <option>Claude Sonnet 4.5</option>
+                            <option>GPT-5 Codex</option>
+                        </select>
+                    </div>
+                    <div class="flex-1 text-left">
+                        <label class="text-xs font-semibold text-gray-500 uppercase tracking-wider">Example Templates</label>
+                        <select class="w-full bg-white/5 border border-white/10 rounded-lg p-2 mt-1 focus:ring-2 focus:ring-purple-500 outline-none">
+                            <option>SaaS Landing Page</option>
+                            <option>Portfolio Website</option>
+                            <option>E-commerce Store</option>
+                        </select>
+                    </div>
+                </div>
 
-      <h1 class="text-[7rem] md:text-[9rem] font-extrabold leading-none tracking-tight">
-        KA<br>RL
-      </h1>
+                <div class="relative">
+                    <textarea 
+                        class="w-full h-40 bg-white/5 border border-white/10 rounded-xl p-4 text-white placeholder:text-gray-600 focus:ring-2 focus:ring-purple-500 outline-none resize-none"
+                        placeholder="Describe the website you want to build (e.g., 'A modern bakery website with a menu and contact form')..."
+                    ></textarea>
+                    <button class="absolute bottom-4 right-4 bg-white text-black font-bold px-6 py-2 rounded-lg hover:bg-gray-200 transition-all flex items-center gap-2">
+                        Generate Site
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="m5 12 7-7 7 7"/><path d="M12 19V5"/></svg>
+                    </button>
+                </div>
+            </div>
 
-      <div class="mt-10 flex gap-4">
-        <a href="#projects"
-           class="border border-black px-6 py-2 text-sm font-medium hover:bg-black hover:text-white transition">
-          Explore Works
-        </a>
-        <a href="#contact"
-           class="border border-black px-6 py-2 text-sm font-medium hover:bg-black hover:text-white transition">
-          Connect with me
-        </a>
-      </div>
-    </div>
-
-    <!-- IMAGE -->
-    <div class="relative">
-      <img
-        src="karl_pogi.jpg"
-        alt="Karl portrait"
-        class="w-[300px] md:w-[380px] rotate-[-4deg]"
-      />
-    </div>
-
-  </div>
-</section>
-
-<!-- ABOUT -->
-<section id="about" class="py-32">
-  <div class="max-w-4xl mx-auto px-10">
-    <h2 class="text-4xl font-bold mb-8">About Me</h2>
-    <p class="text-lg leading-relaxed text-gray-700">
-      I am a third-year college student majoring in English Language Studies with
-      a deep passion for writing, visual art, and digital design. I enjoy working
-      at the intersection of creativity and analysis, whether through research,
-      storytelling, or visual communication.
-    </p>
-  </div>
-</section>
-
-<!-- PROJECTS -->
-<section id="projects" class="py-32 bg-gray-50">
-  <div class="max-w-7xl mx-auto px-10">
-    <h2 class="text-4xl font-bold mb-16">Projects</h2>
-
-    <div class="grid md:grid-cols-3 gap-12">
-      <a href="writing.html" class="group">
-        <h3 class="text-xl font-semibold group-hover:underline">Writing</h3>
-        <p class="text-gray-600 mt-2">Essays and poems</p>
-      </a>
-
-      <a href="artworks.html" class="group">
-        <h3 class="text-xl font-semibold group-hover:underline">Artwork</h3>
-        <p class="text-gray-600 mt-2">Digital and traditional works</p>
-      </a>
-
-      <a href="design.html" class="group">
-        <h3 class="text-xl font-semibold group-hover:underline">Design</h3>
-        <p class="text-gray-600 mt-2">Layouts and presentations</p>
-      </a>
-    </div>
-  </div>
-</section>
-
-<!-- CONTACT -->
-<section id="contact" class="py-32">
-  <div class="max-w-4xl mx-auto px-10">
-    <h2 class="text-4xl font-bold mb-8">Contact</h2>
-
-    <p class="text-lg mb-6">
-      Want to collaborate or just say hi?
-    </p>
-
-    <a href="mailto:karllexterdulce@gmail.com"
-       class="inline-block border border-black px-6 py-2 text-sm font-medium hover:bg-black hover:text-white transition">
-      karllexterdulce@gmail.com
-    </a>
-  </div>
-</section>
-
-<!-- FOOTER -->
-<footer class="py-12 text-center text-sm text-gray-500">
-  © 2025 Karl Dulce
-</footer>
+            <div class="flex flex-wrap justify-center gap-4 pt-4 opacity-50 grayscale hover:grayscale-0 transition-all">
+                <span class="text-sm font-medium border border-white/20 px-3 py-1 rounded-full">Next.js</span>
+                <span class="text-sm font-medium border border-white/20 px-3 py-1 rounded-full">Tailwind CSS</span>
+                <span class="text-sm font-medium border border-white/20 px-3 py-1 rounded-full">Vercel AI</span>
+            </div>
+        </div>
+    </main>
 
 </body>
 </html>
