--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <!-- Hero Banner: KA [Photo] RL -->
     <section id="top" class="relative min-h-screen flex items-center justify-center overflow-hidden pt-20 bg-editorial-light">
         <div class="absolute inset-0 z-0">
-            <img src="https://picsum.photos/1920/1080?random=1" alt="Minimalist abstract background" class="w-full h-full object-cover opacity-5">
+            <img src="images/karl_pogi.jpg" alt="Portrait of Karl" class="w-full h-full object-cover">
             <div class="absolute inset-0 bg-gradient-to-b from-transparent via-editorial-light/90 to-editorial-light"></div>
         </div>
         
@@ -160,7 +160,7 @@
                         <h1 class="font-lexend text-6xl md:text-8xl lg:text-9xl font-black leading-none">KA</h1>
 
                         <div class="relative w-36 h-36 md:w-48 md:h-48 lg:w-56 lg:h-56 rounded-full overflow-hidden shadow-2xl animate-float">
-                            <img src="https://picsum.photos/300/300?random=2" alt="Portrait of Karl" class="w-full h-full object-cover">
+                            <img src="images/karl_pogi.jpg" alt="Portrait of Karl" class="relative w-full h-auto rounded-2xl object-cover shadow-2xl">
                         </div>
 
                         <h1 class="font-lexend text-6xl md:text-8xl lg:text-9xl font-black leading-none">RL</h1>
